<resources>
	<string name="app_name">CubeAcademy</string>
	<string name="your_nominations_title">Your nominations</string>
	<string name="empty_body">once you submit a nomination, you will be able to SEE it here.</string>
	<string name="create_new_nomination">Create New Nomination</string>
	<string name="create_a_nomination">Create a nomination</string>
	<string name="submit_nomination">Submit Nomination</string>
	<string name="back">Back</string>
	<string name="id_like_to_nominate">I’d like to nominate...</string>
	<string name="id_like_to_nominate_subtitle">Please select a cube who you feel has done something honourable this month or just all round has a great work ethic.</string>
	<string name="reason_title">I’D LIKE TO NOMINATE THIS CUBE BECAUSE...</string>
	<string name="reason_subtitle">Please let us know why you think this cube deserves the ‘cube of the month’ title 🏆⭐</string>
	<string name="process_title">IS HOW WE CURRENTLY RUN CUBE OF THE MONTH FAIR?</string>
	<string name="process_subtitle">As you know, out the nominees chosen, we spin a wheel to pick the cube of the month. What’s your opinion on this method?</string>
	<string name="nomination_submitted">Nomination Submitted</string>
	<string name="back_to_home">Back to home</string>
	<string name="nomination_submitted_body">Thank you for taking the time to fill out this form! Why not nominate another cube?</string>
	<string name="cubes_name">Cube\'s name</string>
	<string name="reasoning">Reasoning</string>
	<string name="opinion">Opinion</string>
	<string name="very_fair">Very Fair</string>
	<string name="fair">Fair</string>
	<string name="unfair">Unfair</string>
	<string name="very_unfair">Very Unfair</string>
    <string name="not_sure">Not sure</string>
	<string name="are_you_sure">ARE YOU SURE?</string>
	<string name="if_you_leave_this_page_you_will_lose_any_progress_made">If you leave this page, you will loose any progress made.</string>
	<string name="cancel">CANCEL</string>
	<string name="yes_leave_page">YES, LEAVE PAGE</string>
	<string name="red_colour">#FFF70087</string>


</resources>