<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	tools:context=".activities.CreateNominationActivity">

	<androidx.appcompat.widget.Toolbar
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@color/black"
		android:paddingBottom="10dp"
		android:paddingTop="30dp">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			style="@style/bold_headline_small"
			android:layout_gravity="center_horizontal"
			android:text="@string/create_a_nomination"
			android:textColor="@color/white" />
	</androidx.appcompat.widget.Toolbar>

	<androidx.core.widget.NestedScrollView
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">

			<ImageView
				android:layout_width="match_parent"
				android:layout_height="180dp"
				android:importantForAccessibility="no"
				android:scaleType="centerCrop"
				android:src="@drawable/artwork_create" />

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:paddingHorizontal="16dp"
				android:paddingBottom="50dp">

				<TextView
					style="@style/bold_headline_small_caps"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginTop="30dp"
					android:text="@string/id_like_to_nominate"
					android:textColor="@color/black" />

				<TextView
					style="@style/body"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginTop="8dp"
					android:text="@string/id_like_to_nominate_subtitle"
					android:textColor="@color/black" />


				<LinearLayout
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginTop="30dp"
					android:orientation="horizontal">

					<TextView
						style="@style/asterisk_text"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginRight="8dp"
						android:text="*" />

					<TextView
						style="@style/bold_headline_smallest"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/cubes_name"
						android:textColor="@color/black" />

				</LinearLayout>


				<!-- TODO: Add the drop down selector of nominees -->
				<androidx.appcompat.widget.AppCompatSpinner
					android:id="@+id/cube_nominee_spinner"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="10dp"
					android:layout_marginBottom="20dp" />


				<View
					android:layout_width="match_parent"
					android:layout_height="1dp"
					android:layout_marginTop="40dp"
					android:background="@color/grey_mild" />

				<TextView
					style="@style/bold_headline_small"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginTop="30dp"
					android:text="@string/reason_title"
					android:textColor="@color/black" />

				<TextView
					style="@style/body"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginTop="8dp"
					android:text="@string/reason_subtitle"
					android:textColor="@color/black" />

				<LinearLayout
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginTop="30dp"
					android:layout_marginBottom="8dp"
					android:orientation="horizontal">

					<TextView
						style="@style/asterisk_text"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginRight="8dp"
						android:text="*" />

					<TextView
						style="@style/bold_headline_smallest"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/reasoning"
						android:textColor="@color/black" />

				</LinearLayout>

				<EditText
					android:id="@+id/reasoning_edit_text"
					style="@style/body"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:background="@drawable/reasoning_edittext_border"
					android:gravity="top|start"
					android:inputType="textMultiLine"
					android:lines="8"
					android:padding="12dp"
					android:maxLength="280"
					android:scrollbars="vertical" />


				<View
					android:layout_width="match_parent"
					android:layout_height="1dp"
					android:layout_marginTop="40dp"
					android:background="@color/grey_mild" />

				<TextView
					android:id="@+id/howwerun_textview"
					style="@style/bold_headline_small"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginTop="30dp"
					android:text="@string/process_title"
					android:textColor="@color/black" />

				<TextView
					style="@style/body"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginTop="8dp"
					android:text="@string/process_subtitle"
					android:textColor="@color/black" />

				<!-- TODO: Add the Radio button for the feedback -->
				<RadioGroup
					android:id="@+id/radioGroup"
					android:layout_marginTop="25dp"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="vertical">
					<RadioButton
						android:id="@+id/very_unfair"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						style="@style/radiobuttonstyle"
						android:layoutDirection="rtl"
						android:drawableLeft="@drawable/very_unfair"
						android:text="@string/very_unfair" />
					<RadioButton
						android:id="@+id/unfair"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						style="@style/radiobuttonstyle"
						android:layoutDirection="rtl"
						android:drawableLeft="@drawable/unfair"
						android:text="@string/unfair" />

					<RadioButton
						android:id="@+id/neutral"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						style="@style/radiobuttonstyle"
						android:layoutDirection="rtl"
						android:drawableLeft="@drawable/neutral"
						android:text="@string/not_sure" />

					<RadioButton
						android:id="@+id/fair_good"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						style="@style/radiobuttonstyle"
						android:layoutDirection="rtl"
						android:drawableLeft="@drawable/fair_good"
						android:text="@string/fair" />

					<RadioButton
						android:id="@+id/very_fair"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						style="@style/radiobuttonstyle"
						android:layoutDirection="rtl"
						android:drawableLeft="@drawable/very_fair"
						android:text="@string/very_fair" />

				</RadioGroup>

			</LinearLayout>

		</LinearLayout>

	</androidx.core.widget.NestedScrollView>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@color/white"
		android:clipChildren="false"
		android:clipToPadding="false"
		android:elevation="10dp"
		android:gravity="center_vertical"
		android:orientation="horizontal"
		android:paddingHorizontal="24dp"
		android:paddingVertical="20dp">

		<androidx.appcompat.widget.AppCompatButton
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:id="@+id/back_button"
			style="@style/button_outline"
			android:layout_marginEnd="7dp"
			android:layout_weight="1"
			android:text="@string/back" />

		<androidx.appcompat.widget.AppCompatButton
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:id="@+id/submit_nomination_button"
			style="@style/button"
			android:layout_marginStart="7dp"
			android:layout_weight="2"
			android:text="@string/submit_nomination" />

	</LinearLayout>
</LinearLayout>