<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/formModal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:background="@android:color/white"
    android:elevation="8dp"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        style="@style/bold_headline_small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/are_you_sure"
        android:textColor="@color/black" />

    <TextView
        style="@style/body_small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:paddingEnd="16dp"
        android:text="@string/if_you_leave_this_page_you_will_lose_any_progress_made"
        android:textColor="@color/black" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/leave_button"
        style="@style/button_outline"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="12dp"
        android:text="@string/yes_leave_page" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/cancel_button"
        style="@style/button_outline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel" />
</LinearLayout>